@startuml
abstract class Command {
    +execute(...)
}

class AddCommand
class DeleteCommand
class ArchiveCommand
class UnarchiveCommand
class ListArchiveCommand

class Parser {
    +{static} parse(fullCommand): Command
}

class AddCommandParser
class DeleteCommandParser
class ArchiveCommandParser
class UnarchiveCommandParser

class ApplicationList {
    +getActiveApplication(index)
    +getArchivedApplication(index)
    +hasApplication(app)
    +countActive()
    +countArchived()
}

class Application {
    -isArchived: boolean
    +isArchived(): boolean
    +setArchived(boolean)
}

Command <|-- AddCommand
Command <|-- DeleteCommand
Command <|-- ArchiveCommand
Command <|-- UnarchiveCommand
Command <|-- ListArchiveCommand

Parser ..> AddCommandParser : delegates to
Parser ..> DeleteCommandParser : delegates to
Parser ..> ArchiveCommandParser : delegates to
Parser ..> UnarchiveCommandParser : delegates to

AddCommand ..> ApplicationList
DeleteCommand ..> ApplicationList
ArchiveCommand ..> ApplicationList
UnarchiveCommand ..> ApplicationList
ListArchiveCommand ..> ApplicationList

ApplicationList "1" *-- "0..*" Application
@enduml
